Kubernetes/Linkding-Bookmarker/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: linkding
  name: linkding
spec:
  replicas: 1
  selector:
    matchLabels:
      app: linkding
  template:
    metadata:
      labels:
        app: linkding
    spec:
      containers:
      - image: sissbruecker/linkding:latest
        name: linkding
        ports:
            - containerPort: 9090
      volumes:
        - name: linkding-pvc
          persistentVolumeClaim:
            claimName: linkding-pvc
