Kubernetes/Linkding-Bookmarker/linkdingservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkding
  labels:
    app: linkding
spec:
  type: NodePort    
  selector:
    app: linkding    
  ports:
  -
    port: 8080        
    targetPort: 9090
    nodePort: 30080
