Kubernetes/Linkding-Bookmarker/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: linkding
  name: linkding
spec:
  type: LoadBalancer
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 9090
  selector:
    app: linkding
status:
