Kubernetes/Linkding-Bookmarker/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkding-ingress
spec:
  ingressClassName: traefik
  rules:
  - host: "linkding.ilyas"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: linkding
            port:
              number: 8000
